; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-krb.c_c_print.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-krb.c_c_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"M-\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"^\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"%c\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*, i8*)* @c_print to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @c_print(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8, align 1
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 1, i32* %9, align 4
  br label %10

10:                                               ; preds = %42, %3
  %11 = load i8*, i8** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = icmp ult i8* %11, %12
  br i1 %13, label %14, label %48

14:                                               ; preds = %10
  %15 = load i8*, i8** %6, align 8
  %16 = getelementptr inbounds i8, i8* %15, i32 1
  store i8* %16, i8** %6, align 8
  %17 = load i8, i8* %15, align 1
  store i8 %17, i8* %8, align 1
  %18 = load i8, i8* %8, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp eq i32 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %14
  store i32 0, i32* %9, align 4
  br label %48

22:                                               ; preds = %14
  %23 = load i8, i8* %8, align 1
  %24 = call i32 @ND_ISASCII(i8 signext %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %31, label %26

26:                                               ; preds = %22
  %27 = load i8, i8* %8, align 1
  %28 = call signext i8 @ND_TOASCII(i8 signext %27)
  store i8 %28, i8* %8, align 1
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @ND_PRINT(i32* bitcast ([3 x i8]* @.str to i32*))
  br label %31

31:                                               ; preds = %26, %22
  %32 = load i8, i8* %8, align 1
  %33 = call i32 @ND_ISPRINT(i8 signext %32)
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %42, label %35

35:                                               ; preds = %31
  %36 = load i8, i8* %8, align 1
  %37 = sext i8 %36 to i32
  %38 = xor i32 %37, 64
  %39 = trunc i32 %38 to i8
  store i8 %39, i8* %8, align 1
  %40 = load i32*, i32** %5, align 8
  %41 = call i32 @ND_PRINT(i32* bitcast ([2 x i8]* @.str.1 to i32*))
  br label %42

42:                                               ; preds = %35, %31
  %43 = load i32*, i32** %5, align 8
  %44 = load i8, i8* %8, align 1
  %45 = sext i8 %44 to i64
  %46 = inttoptr i64 %45 to i32*
  %47 = call i32 @ND_PRINT(i32* %46)
  br label %10

48:                                               ; preds = %21, %10
  %49 = load i32, i32* %9, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %52

51:                                               ; preds = %48
  store i8* null, i8** %4, align 8
  br label %54

52:                                               ; preds = %48
  %53 = load i8*, i8** %6, align 8
  store i8* %53, i8** %4, align 8
  br label %54

54:                                               ; preds = %52, %51
  %55 = load i8*, i8** %4, align 8
  ret i8* %55
}

declare dso_local i32 @ND_ISASCII(i8 signext) #1

declare dso_local signext i8 @ND_TOASCII(i8 signext) #1

declare dso_local i32 @ND_PRINT(i32*) #1

declare dso_local i32 @ND_ISPRINT(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
